# wasm-rust

./: ARCHITECTURE.md  Cargo.toml  ReadMe.md  build-architecture-2.0.sh  validation_report.md
.comate/specs/wasm-native-rust-optimization/: doc.md  implementation-comparison.md  tasks-revised.md  tasks.md
.comate/specs/wasm-rust-compiler/: doc.md  summary.md  tasks.md
.github/workflows/: mir-parity.yml
.kiro/specs/wasm-rust-compiler/: design.md  requirements.md  tasks.md
benches/: performance_benchmarks.rs
crates/wasm/: COMPILER-CONTRACT.md  Cargo.toml
crates/wasm-macros/: Cargo.toml
crates/wasm-macros/src/: lib.rs
crates/wasm/src/: component.rs  gc.rs  host.rs  lib.rs  memory.rs  threading.rs  wasmir.rs
docs/: PRD-WasmRust.md  SYSTEM_AUDIT_RESPONSE.md  TSD-WasmRust.md  wasmir-specification.md
docs/RFCs/: 0001-architecture-2.0-overview.md
docs/architecture/: DESIGN_PRINCIPLES.md  architecture-2.0-design-principles.md  wasmrust-vs-moonbit.md
scripts/: check_mir_parity.py  compare_mir_dumps.py  validate_wasmir_specification.py
src/: Cargo.toml  lib.rs
src/backend/: mod.rs
src/backend/cranelift/: Cargo.toml  integration.rs  lib.rs  linear_types.rs  mir_lowering.rs  mod.rs  thin_monomorphization.rs  wasm_codegen.rs
src/backend/llvm/: mod.rs
src/wasmir/: Cargo.toml  executable_tests.rs  lib.rs  linear_passes.rs  lower.rs
tests/: architecture-2.0-validation.rs  cranelift_integration.rs  linear_pass_invariants.rs  mir_parity_tests.rs  mir_to_wasmir.rs  property_cranelift_performance.rs  property_externref_safety.rs  property_sharedslice_safety.rs  wasm_integration.rs  wasmir_spec_snapshots.rs  wasmir_to_wasm.rs
tooling/wasm-crates-registry/: Cargo.toml  README.md
tooling/wasm-crates-registry/docs/: ARCHITECTURE.md
tooling/wasm-crates-registry/src/: api.rs  database.rs  main.rs  schema.rs
tooling/wasm-crates-registry/src/cli/: main.rs
tooling/wasm-crates-registry/src/testing/: mod.rs
tooling/wasm-crates-registry/tests/: integration_test.rs
