[package]
name = "wasm-macros"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Procedural macros for WasmRust Architecture 2.0"
authors = ["WasmRust Team"]

[dependencies]
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"

[lib]
proc-macro = true
path = "src/lib.rs"
