[package]
name = "wasm-crates-registry"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WasmRust Curation Registry - Federated WASM-compatible crate registry"
authors = ["WasmRust Team"]
repository = "https://github.com/wasmrust/wasm-crates-registry"

[dependencies]
# Core dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-rustls"] }

# Web framework (optional, for web interface)
warp = "0.3"
tower = "0.4"

# Cryptography for signing
ring = "0.17"

[dev-dependencies]
tempfile = "3.0"
pretty_assertions = "1.0"

[[bin]]
name = "wasm-crates-registry"
path = "src/main.rs"

[[bin]]
name = "wasm-crates-registry-cli"
path = "src/cli/main.rs"