[package]
name = "wasmrust-codegen-cranelift"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "WASM-tuned Cranelift backend for WasmRust compiler"

[lib]
crate-type = ["rlib"]
path = "lib.rs"

[dependencies]
wasm = { path = "../../../crates/wasm" }

# Core Cranelift dependencies
cranelift-codegen = "0.99.0"
cranelift-frontend = "0.99.0"
cranelift-module = "0.99.0"
cranelift-object = "0.99.0"
cranelift-native = "0.99.0"
cranelift-jit = "0.99.0"
cranelift-interpreter = "0.99.0"

# WASM-specific dependencies
wasmprinter = "0.2.0"
wasmparser = "0.100.0"
wasm-encoder = "0.30.0"

# Rust compiler dependencies
rustc-middle = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc-target = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc-data-structures = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc-ty = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc-mir = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }
rustc-serialize = { git = "https://github.com/rust-lang/rust.git", branch = "stable" }

[target.'cfg(all(target_arch = "wasm32", target_os = "unknown"))'.dependencies]
# Browser-specific optimizations
js-sys = "0.3.0"
web-sys = "0.3.0"

[target.'cfg(all(target_arch = "wasm32", target_os = "wasi"))'.dependencies]
# WASI-specific dependencies
wasi-common = "0.1.0"
wasmtime = "0.39.0"

[features]
default = ["dev-build"]
dev-build = []
release-build = ["pgo"]
pgo = []

[lints.rust]
unexpected_cfgs = "forbid"
